--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.android.gms:play-services:12.0.1'
     implementation 'com.google.code.gson:gson:2.2.4'
+    implementation 'org.apache.directory.studio:org.apache.commons.io:2.4'
     //implementation 'me.dm7.barcodescanner:zxing:1.9.8'
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
     implementation 'com.android.volley:volley:1.1.1'
